<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="194dp"
        android:layout_height="47dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="41dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="195dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName5"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="196dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/editTextTextConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/editTextTextPasswordlbl"
        android:layout_width="143dp"
        android:layout_height="22dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/lblPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextConfirmPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail" />

    <TextView
        android:id="@+id/editTextTextEmail"
        android:layout_width="116dp"
        android:layout_height="20dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/lblEmail"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPasswordlbl"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <TextView
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="121dp"
        android:layout_height="19dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/lblName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmail"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextTextConfirmPassword"
        android:layout_width="128dp"
        android:layout_height="19dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/confirm_password"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="157dp"
        android:text="@string/lblSave"
        android:onClick="saveClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.164" />

</androidx.constraintlayout.widget.ConstraintLayout>